--- a/src/Form/Form.css
+++ b/src/Form/Form.css
@@ -30,7 +30,9 @@ select{
 .btn{
     width: 120px;
     border: 1px solid transparent;
+    background-color: #4cae4c;
     padding: 8px;
+    color: #fff;
     cursor: pointer;
     border-radius: 4px;
 }
